# glm-ocr-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/glm_ocr_mcp/: __init__.py  __main__.py  ocr.py  server.py
