[project]
name = "glm-ocr-mcp"
version = "0.1.0"
description = "MCP server for GLM OCR to extract text from images and PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
glm-ocr-mcp = "glm_ocr_mcp.__main__:run"

[tool.rye]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/glm_ocr_mcp"]

[tool.hatch.env.develop]
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
